--- a/_posts/2016-06-02-hello-2016.md
+++ b/_posts/2016-06-02-hello-2016.md
@@ -1,7 +1,7 @@
 ---
 layout:     post
-title:      "Hello 2016"
-subtitle:   " \"Hello World\""
+title:      "换到Github"
+subtitle:   " \"build by Jekyll \""
 date:       2016-06-02 12:00:00
 author:     "Vincent"
 header-img: "img/post-bg.jpg"
