--- a/_posts/2016-06-02-hello-2016.md
+++ b/_posts/2016-06-02-hello-2016.md
@@ -4,7 +4,7 @@ title:      "换到Github"
 subtitle:   " \"build by Jekyll \""
 date:       2016-06-02 12:00:00
 author:     "Vincent"
-header-img: "img/post-bg.jpg"
+header-img: "img/post-bg-artwork1.jpg"
 catalog: true
 tags:
     - 生活
