--- a/_posts/2015-05-08-ENC28J60.md
+++ b/_posts/2015-05-08-ENC28J60.md
@@ -12,47 +12,46 @@ tags:
 ---
 
 
-[drivers.rar][/img/in-post/1847276214.rar]
+[drivers.rar](/img/in-post/1847276214.rar)
 
 HanRun HR911105A 14/20
-<table border="1">
-<tr><td>CLKOUT</td><td>INT </td></tr>
-<tr><td>WOL</td><td>SO </td></tr>
-<tr><td>SI</td><td>SCK </td></tr>
-<tr><td>CS</td><td>RESET</td></tr>
-<tr><td>VCC</td><td>GND</td></tr>
-</table>
+
+| CLKOUT | INT |
+|---|---|
+|WOL|SO  | 
+| SI | SCK  | 
+| CS | RESET |  | 
+| VCC | GND | 
 
 接线
 
-<table border="1">
-<tr>
-<th>ENC28J60</td><td>Arduino Due/UNO</td><td>Arduino Mega</td></tr>
-<tr><td>VCC</td><td>3V3</td><td>3V3</td></tr>
-<tr><td>CLKOUT</td><td> </td><td> </td></tr>
-<tr><td>ENC-WOL</td><td> </td><td> </td></tr>
-<tr><td>RESET</td><td>RESET</td><td>RESET</td></tr>
-<tr><td>ENC-INT</td><td>2</td><td>2</td></tr>
-<tr><td>GND</td><td>GND</td><td>GND</td></tr>
-<tr><td>SCK</td><td>13</td><td>52</td></tr>
-<tr><td>MISO</td><td>12</td><td>50</td></tr>
-<tr><td>MOSI</td><td>11</td><td>51</td></tr>
-<tr><td>CS</td><td>10</td><td>53</td></tr>
-</table>
-
+|ENC28J60 | Arduino Due/UNO | Arduino Mega | 
+|---|---|---|
+| VCC | 3V3 | 3V3 | 
+| CLKOUT |   |   | 
+| ENC-WOL |   |   | 
+| RESET | RESET | RESET | 
+| ENC-INT | 2 | 2 | 
+| GND | GND | GND | 
+| SCK | 13 | 52 | 
+| MISO | 12 | 50 | 
+| MOSI | 11 | 51 | 
+| CS | 10 | 53 | 
 
 **另外一个库的接法**
+
 https://github.com/jcw/ethercard
 该库支持DNS,DHCP 测试可用。
 
-<table border="1">
-<tr><td>VCC</td><td>3.3V</td></tr>
-<tr><td>GND</td><td>GND</td></tr>
-<tr><td>SCK </td><td>Pin 13 </td></tr>
-<tr><td>SO  </td><td>Pin 12</td></tr>
-<tr><td>SI  </td><td>Pin 11</td></tr>
-<tr><td>CS  </td><td>Pin  8 # Selectable with the ether.begin() function</td></tr>
-</table>
+
+|--|--|
+|---|---|
+| VCC | 3.3V | 
+| GND | GND | 
+| SCK  | Pin 13  | 
+| SO   | Pin 12 | 
+| SI   | Pin 11 | 
+| CS   | Pin 8 # Selectable with the ether.begin() function | 
 
 
 
