--- a/_posts/2019-03-23-k8s-ingress.md
+++ b/_posts/2019-03-23-k8s-ingress.md
@@ -1,6 +1,6 @@
 ---
 layout:     post
-title:      "kubernetes集群(2) Ingress"
+title:      "搭建Kubernetes集群(2) Ingress"
 date:       2019-04-04 15:31:00
 author:     "Vincent"
 header-img:  "img/post-bg-engine.jpg"
