--- a/_posts/2019-04-04-k8s-ingress.md
+++ b/_posts/2019-04-04-k8s-ingress.md
@@ -449,3 +449,61 @@ spec:
 
 
 
+# 应用部署模板
+
+```yaml
+---
+# developement
+apiVersion: apps/v1beta1
+kind: Deployment
+metadata:
+  name: philo-screening-svc
+spec:
+  replicas: 2
+  template:
+    metadata:
+      labels:
+        app: philo-screening-svc
+        domain: com.philo.office.screening
+    spec:
+      containers:
+        - name: philo-screening-svc
+          image: vincentmi/screening
+          ports:
+            - containerPort: 80
+
+---
+kind: Service
+apiVersion: v1
+metadata:
+  labels:
+    app: philo-screening-svc
+    domain: com.philo.office.screening
+  name: philo-screening-svc
+  namespace: default
+spec:
+  ports:
+    - port: 80
+      targetPort: 80
+      name: http
+  selector:
+    app: philo-screening-svc
+
+---
+#--- ingress
+apiVersion: extensions/v1beta1
+kind: Ingress
+metadata:
+  name: philo-screening-svc-ingress
+spec:
+  rules:
+    - host: screening.philowork.com
+      http:
+        paths:
+          - backend:
+              serviceName: philo-screening-svc
+              servicePort: 80
+
+
+```
+
