add old post script

--- a/_posts/2007-09-22-1-0-miao-de-yi-yi.md
+++ b/_posts/2007-09-22-1-0-miao-de-yi-yi.md
@@ -4,7 +4,7 @@ title:      "10秒的意义"
 date:       2007-09-22 07:49:33
 author:     "Vincent"
 header-img:  "img/xinyuan-no7.jpg"
-catalog: true
+catalog: false
 tags:
     - 新浪博客
     - 股票
