--- a/_posts/2005-10-21-X-M-L-yu-X-S-L-2.md
+++ b/_posts/2005-10-21-X-M-L-yu-X-S-L-2.md
@@ -4,7 +4,7 @@ title:      "XML与XSL(2)"
 date:       2005-10-21 22:52:03
 author:     "Vincent"
 header-img:  "img/xinyuan-no7.jpg"
-catalog: true
+catalog: false
 tags:
     - 新浪博客
     - 技术文章
