--- a/_posts/2005-10-27-G-r-u-b.md
+++ b/_posts/2005-10-27-G-r-u-b.md
@@ -4,7 +4,7 @@ title:      "Grub"
 date:       2005-10-27 01:01:15
 author:     "Vincent"
 header-img:  "img/xinyuan-no7.jpg"
-catalog: true
+catalog: false
 tags:
     - 新浪博客
     - 技术文章
