--- a/_posts/2006-01-14-bo-fang-qi.md
+++ b/_posts/2006-01-14-bo-fang-qi.md
@@ -4,7 +4,7 @@ title:      "播放器"
 date:       2006-01-14 12:44:42
 author:     "Vincent"
 header-img:  "img/xinyuan-no7.jpg"
-catalog: true
+catalog: false
 tags:
     - 新浪博客
     - 技术文章
