--- a/_posts/2007-10-13-xuan-ze.md
+++ b/_posts/2007-10-13-xuan-ze.md
@@ -4,7 +4,7 @@ title:      "选择"
 date:       2007-10-13 01:06:24
 author:     "Vincent"
 header-img:  "img/xinyuan-no7.jpg"
-catalog: true
+catalog: false
 tags:
     - 新浪博客
     - 生活记录
