--- a/_posts/2008-01-17-leng-a.md
+++ b/_posts/2008-01-17-leng-a.md
@@ -4,7 +4,7 @@ title:      "冷啊"
 date:       2008-01-17 22:50:30
 author:     "Vincent"
 header-img:  "img/xinyuan-no7.jpg"
-catalog: true
+catalog: false
 tags:
     - 新浪博客
 ---
