--- a/_posts/2008-08-08-0-8-0-8-0-8.md
+++ b/_posts/2008-08-08-0-8-0-8-0-8.md
@@ -4,7 +4,7 @@ title:      "080808"
 date:       2008-08-08 09:53:37
 author:     "Vincent"
 header-img:  "img/xinyuan-no7.jpg"
-catalog: true
+catalog: false
 tags:
     - 新浪博客
 ---
