--- a/_posts/2008-12-31-2-0-0-8.md
+++ b/_posts/2008-12-31-2-0-0-8.md
@@ -4,7 +4,7 @@ title:      "2008"
 date:       2008-12-31 09:33:37
 author:     "Vincent"
 header-img:  "img/xinyuan-no7.jpg"
-catalog: true
+catalog: false
 tags:
     - 新浪博客
 ---
