--- a/_posts/2010-10-11-ha-ha.md
+++ b/_posts/2010-10-11-ha-ha.md
@@ -4,7 +4,7 @@ title:      "哈哈"
 date:       2010-10-11 22:23:28
 author:     "Vincent"
 header-img:  "img/xinyuan-no7.jpg"
-catalog: true
+catalog: false
 tags:
     - 新浪博客
 ---
