--- a/_posts/2005-10-27-G-r-u-b.md
+++ b/_posts/2005-10-27-G-r-u-b.md
@@ -3,7 +3,7 @@ layout:     post
 title:      "Grub"
 date:       2005-10-27 01:01:15
 author:     "Vincent"
-header-img:  "img/xinyuan-no7.jpg"
+header-img:  "img/post-bg-dot.jpg"
 catalog: false
 tags:
     - 新浪博客
