--- a/_posts/2007-09-20-a-bad-day.md
+++ b/_posts/2007-09-20-a-bad-day.md
@@ -3,7 +3,7 @@ layout:     post
 title:      "极衰的一天"
 date:       2007-09-20 09:30:30
 author:     "Vincent"
-header-img:  "img/xinyuan-no7.jpg"
+header-img:  "img/home-bg-street.jpg"
 catalog: false
 tags:
     - 新浪博客
