--- a/_posts/2020-08-13-mbp-crash.md
+++ b/_posts/2020-08-13-mbp-crash.md
@@ -3,7 +3,7 @@ layout:     post
 title:      "来挽救MBP"
 date:       "2020-08-13 23:38:00"
 author:     "Vincent"
-header-img:  "img/post-bg-water.jpg"
+header-img:  "img/bulleye_red.svg"
 catalog: true
 tags:
     - MAC
