--- a/_posts/2006-01-14-bo-fang-qi.md
+++ b/_posts/2006-01-14-bo-fang-qi.md
@@ -3,7 +3,7 @@ layout:     post
 title:      "播放器"
 date:       2006-01-14 12:44:42
 author:     "Vincent"
-header-img:  "img/xinyuan-no7.jpg"
+header-img:  "img/post-bg-dot.jpg"
 catalog: false
 tags:
     - 新浪博客
