add CDN  support

--- a/_posts/2007-09-25-cd-motor-show-2017-1.md
+++ b/_posts/2007-09-25-cd-motor-show-2017-1.md
@@ -16,21 +16,21 @@ POCO http://my.poco.cn/id-129395.shtml
 
 
 
-![](/img/poco/cz13.jpg)
+![]({{ site.imgurl }}/img/poco/cz13.jpg)
 
-![](/img/poco/cz14.jpg)
+![]({{ site.imgurl }}/img/poco/cz14.jpg)
 
-![](/img/poco/cz15.jpg)
+![]({{ site.imgurl }}/img/poco/cz15.jpg)
 
-![](/img/poco/cz11.jpg)
+![]({{ site.imgurl }}/img/poco/cz11.jpg)
 
-![](/img/poco/cz12.jpg)
+![]({{ site.imgurl }}/img/poco/cz12.jpg)
 
-![](/img/poco/cz16.jpg) 
+![]({{ site.imgurl }}/img/poco/cz16.jpg) 
 
-![](/img/poco/cz17.jpg) 
+![]({{ site.imgurl }}/img/poco/cz17.jpg) 
 
-![](/img/poco/cz18.jpg) 
+![]({{ site.imgurl }}/img/poco/cz18.jpg) 
 
 
 
