--- a/_posts/2007-09-25-cd-motor-show-2017-2.md
+++ b/_posts/2007-09-25-cd-motor-show-2017-2.md
@@ -14,19 +14,19 @@ tags:
 
 POCO http://my.poco.cn/id-129395.shtml
 
-![](/img/poco/cz43.jpg)
+![]({{ site.imgurl }}/img/poco/cz43.jpg)
 
-![](/img/poco/cz41.jpg)
+![]({{ site.imgurl }}/img/poco/cz41.jpg)
 
-![](/img/poco/cz42.jpg)
+![]({{ site.imgurl }}/img/poco/cz42.jpg)
 
-![](/img/poco/cz21.jpg)
+![]({{ site.imgurl }}/img/poco/cz21.jpg)
 
-![](/img/poco/cz22.jpg)
+![]({{ site.imgurl }}/img/poco/cz22.jpg)
 
-![](/img/poco/cz23.jpg)
+![]({{ site.imgurl }}/img/poco/cz23.jpg)
 
-![](/img/poco/cz24.jpg)
+![]({{ site.imgurl }}/img/poco/cz24.jpg)
 
 
 
