--- a/_posts/2007-10-13-xuan-ze.md
+++ b/_posts/2007-10-13-xuan-ze.md
@@ -20,7 +20,7 @@ tags:
   
 股票依然提不起兴趣，流血都流麻木了。。。可怜的是好像还有很多和我一样的人。。默哀~~
 <img>
-![/img/sinablog/71953a3836b84d6e16c26519874b87a8.jpeg](/img/sinablog/71953a3836b84d6e16c26519874b87a8.jpeg)
+![/img/sinablog/71953a3836b84d6e16c26519874b87a8.jpeg]({{ site.imgurl }}/img/sinablog/71953a3836b84d6e16c26519874b87a8.jpeg)
 
 
 
