--- a/_posts/2008-08-08-0-8-0-8-0-8.md
+++ b/_posts/2008-08-08-0-8-0-8-0-8.md
@@ -12,8 +12,8 @@ tags:
 
 
 如此吉利的数字，
-![/img/sinablog/39d288eaa68987fe174dfb72db029337.gif](/img/sinablog/39d288eaa68987fe174dfb72db029337.gif)
-![/img/sinablog/1b2fc2d9462007ab5537aba7169ba12f.jpeg](/img/sinablog/1b2fc2d9462007ab5537aba7169ba12f.jpeg)
+![/img/sinablog/39d288eaa68987fe174dfb72db029337.gif]({{ site.imgurl }}/img/sinablog/39d288eaa68987fe174dfb72db029337.gif)
+![/img/sinablog/1b2fc2d9462007ab5537aba7169ba12f.jpeg]({{ site.imgurl }}/img/sinablog/1b2fc2d9462007ab5537aba7169ba12f.jpeg)
 
 愿我中华从此国运昌盛、国泰民安。
 
