--- a/_posts/2020-08-13-mbp-crash.md
+++ b/_posts/2020-08-13-mbp-crash.md
@@ -35,7 +35,7 @@ sudo pmset -a GPUSwitch 2 ：自动切换显卡
  
 下载地址 [https://crystalidea.com/macs-fan-control/download](https://crystalidea.com/macs-fan-control/download)
 
-![macfancontrol.jpg](/img/in-post/macfancontrol.jpg)
+![macfancontrol.jpg]({{ site.imgurl }}/img/in-post/macfancontrol.jpg)
 
 ## Turbo Boost Switcher 关闭睿频
 
