--- a/_posts/2021-07-15-use-netty.md
+++ b/_posts/2021-07-15-use-netty.md
@@ -470,6 +470,30 @@ public class TimeDecoder extends ReplayingDecoder<Void> {
 
 
 
+### 粘包?
+
+我认为粘包并不是TCP的问题或者缺陷.TCP本来就是流式传输保证顺序.粘包是属于通讯协议设计层面的问题.所以需要通过协议设计来解决.
+
+#### 使用长度包头
+
+在包的开始使用固定长度的包头字段,早期短信的协议就是这样固定包头,在包头指定内容长度
+
+```c++
+struct header {
+	int32_t length
+	int32_t command
+	int32_t seqId
+}
+```
+
+
+
+#### 使用分隔符
+
+可以使用分隔符号来拆分数据包比如使用"\r\n".
+
+
+
 ## 使用POJO替代ByteBuf
 
 之前我们一直使用了ByteBuf来处理协议的消息,如果能使用POJO来替代他将让我们的代码更好维护.
