--- a/_posts/2021-07-15-use-netty.md
+++ b/_posts/2021-07-15-use-netty.md
@@ -3,7 +3,7 @@ layout:     post
 title:      "学习下Netty"
 date:       "2021-07-15 10:53:00"
 author:     "Vincent"
-header-img:  "img/bullseye-gradient_blue.svg"
+header-img:  "img/coffee.jpg"
 catalog: true
 tags:
     - Netty
