--- a/_posts/2021-11-16-GB22240.md
+++ b/_posts/2021-11-16-GB22240.md
@@ -3,7 +3,7 @@ layout:     post
 title:      "网络安全等级保护"
 date:       "2021-11-16 17:12:00"
 author:     "Vincent"
-header-img:  "img/post-bg-gfw.jpg"
+header-img:  "img/security.jpg"
 catalog: true
 tags:
     - 等保
