--- a/_posts/2021-11-18-ADSS.md
+++ b/_posts/2021-11-18-ADSS.md
@@ -3,7 +3,7 @@ layout:     post
 title:      "银联卡收单机构账户信息安全管理标准"
 date:       "2021-11-18 17:12:00"
 author:     "Vincent"
-header-img:  "img/post-bg-gfw.jpg"
+header-img:  "img/security.jpg"
 catalog: true
 tags:
     - ADSS
