--- a/_posts/2023-01-19-in-dark.md
+++ b/_posts/2023-01-19-in-dark.md
@@ -23,6 +23,8 @@ tags:
 ![](/img/lam/6.jpg)
 ![](/img/lam/7.jpg)
 ![](/img/lam/8.jpg)
+![](/img/lam/9.jpg)
+![20230129](/img/lam/10.jpg)
 
 <!--58-8118-2469-->
 <!--xfr-08-39-626-730 - 1004 - -->
