--- a/content/post/2021-07-15-use-netty.md
+++ b/content/post/2021-07-15-use-netty.md
@@ -3,7 +3,7 @@ layout:     post
 title:      "学习下Netty"
 date:       "2021-07-15 10:53:00"
 author:     "Vincent"
-image:  "img/coffee.jpg"
+image:  "img/post-bg-java.png"
 catalog: true
 tags:
     - Netty
